--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="/">WebStudio</a>
+        <a href="/"><span>Web</span>Studio</a>
         <ul>
           <li><a href="">Студія</a></li>
           <li><a href="">Портфоліо</a></li>
@@ -17,7 +17,7 @@
         </ul>
       </nav>
       <ul>
-        <li><a href="info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
@@ -123,7 +123,7 @@
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li><a href="info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
