--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <nav>
         <a href="/"><span>Web</span>Studio</a>
         <ul>
-          <li><a href="">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
+          <li><a href="./index.html">Студія</a></li>
+          <li><a href="./portfolio.html">Портфоліо</a></li>
           <li><a href="">Контакти</a></li>
         </ul>
       </nav>
@@ -31,7 +31,7 @@
         <h2>Наші переваги</h2>
         <ul>
           <li>
-            <h3>Уага до деталей</h3>
+            <h3>Увага до деталей</h3>
             <p>
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
@@ -61,7 +61,7 @@
       </section>
       <section>
         <h2>Чим ми займаємося</h2>
-        <ul>
+        <ul> 
           <li><img src="./images/pic1.jpg" alt="Фото лептоп" width="370" /></li>
           <li>
             <img src="./images/pic2.jpg" alt="Фото планшет" width="370" />
